<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">SubMenuActivity!</string>
    <string name="app_name">SubMenu</string>
    <string name="messages">Messages</string>
    <string name="contacts">Contacts</string>
    <string name="calllog">Calllog</string>
    <string name="gallery">Gallery</string>
    <string name="settings">Settings</string>
    <string name="games">games</string>

</resources>